...
    val Print: VerityIcon =
        VerityIcon.Material(VerityPrintOutlineIcon)

    /**
     * Explicit draft actions
     */
    val Add: VerityIcon =
        VerityIcon.Material(VerityAddOutlineIcon)

    val Edit: VerityIcon =
        VerityIcon.Material(Icons.Filled.Edit)

    /**
...
