...
            )

            VeritySpacer(size = VeritySpace.Small)

            VerityTextField(
                role = VerityTextFieldRole.SelectionSearch,
                label = "HSN Code",
                value = hsn,
                onValueChange = { hsn = it },
                editing = true,
                onEnterEdit = null,
                onExitEdit = null,
                suggestions = hsnCodeSuggestions.toMatchingSuggestions(hsn),
...
            )

            VeritySpacer(size = VeritySpace.Small)

            VerityTextField(
                role = VerityTextFieldRole.SelectionSearch,
                label = "Unit",
                value = unit,
                onValueChange = { unit = it },
                editing = true,
                onEnterEdit = null,
                onExitEdit = null,
                suggestions = unitSuggestions.toMatchingSuggestions(unit),
...
